--- a/apple.html
+++ b/apple.html
@@ -34,182 +34,287 @@
           Apple Pay at Apple . Through 12/8.
         </div>
       </header>
-        <div class="gold">
-          <div class="page1">
-            <div class="arvanzurgaa">iPhone 16 Pro</div>
-            <div class="bichig">Hello, Apple intelligence</div>
+      <div class="gold">
+        <div class="page1">
+          <div class="arvanzurgaa">iPhone 16 Pro</div>
+          <div class="bichig">Hello, Apple intelligence</div>
+          <div class="button">
+            <button class="learn">Learn more</button>
+            <button class="buy">Buy</button>
+          </div>
+        </div>
+      </div>
+      <div class="purple">
+        <div class="page2">
+          <div class="arvanzurgaa">iPhone 16</div>
+          <div class="bichig">Hello, Apple intelligence</div>
+          <div class="button">
+            <button class="learn2">Learn more</button>
+            <button class="buy2">Buy</button>
+          </div>
+        </div>
+      </div>
+      <div class="gift">
+        <div class="page3">
+          <div class="arvanzurgaa">Gift magic</div>
+          <div class="bichig">Make their holiday wish come true</div>
+          <div class="button">
+            <button class="shop">Shop gifts</button>
+          </div>
+        </div>
+        <div></div>
+      </div>
+      <div class="page4">
+        <div class="duuruv">
+          <div class="neg">
+            <div class="sda">
+              <div><img src="./air.png" alt="" /></div>
+              <div class="bichig">Two sizes. Faster chip. Does it all</div>
+              <div class="button">
+                <button class="learn">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
+            </div>
+            <div class="ungu"><span>Hello, Apple intelligence</span></div>
+          </div>
+          <div class="hoyr">
+            <div class="arvanzurgaa">Airpods Pro 2</div>
+            <div class="bichig">Now with a Hearing Aid feature.2</div>
             <div class="button">
               <button class="learn">Learn more</button>
               <button class="buy">Buy</button>
             </div>
           </div>
-        </div>
-        <div class="purple">
-            <div class="page2">
-              <div class="arvanzurgaa">iPhone 16</div>
-            <div class="bichig">Hello, Apple intelligence</div>
+          <div class="gurav">
+            <div class="arvanzurgaa">
+              <i class="fa-brands fa-apple fa-xl"></i> Watch
+            </div>
+            <div class="bichig">Thinstant classic.</div>
             <div class="button">
-              <button class="learn2">Learn more</button>
-              <button class="buy2">Buy</button>
+              <button class="learn">Learn more</button>
+              <button class="buy">Buy</button>
             </div>
-            </div>
-      </div>
-      <div class="gift">
-        <div class="page3">
-              <div class="arvanzurgaa">Gift magic</div>
-            <div class="bichig">Make their holiday wish come true</div>
+          </div>
+          <div class="duruv">
+            <div class="arvanzurgaa">Macbook Air</div>
+            <div class="bichig">Lean. Mean. M3 machine.</div>
             <div class="button">
-              <button class="shop">Shop gifts</button>
+              <button class="learn">Learn more</button>
+              <button class="buy">Buy</button>
             </div>
+          </div>
+          <div class="tav">
+            <div class="arvanzurgaa">
+              <i class="fa-brands fa-apple fa-xl"></i>Trade In
             </div>
-        <div>
-      </div>
-    </div>
-    <div class="page4">
-      <div class="duuruv">
-        <div class="neg">
-          <div class="sda">
-            <div> <img src="./air.png" alt=""></div>
-          <div class="bichig">Two sizes. Faster chip. Does it all</div>
-          <div class="button">
-            <button class="learn">Learn more</button>
-            <button class="buy">Buy</button>
-          </div></div>
-          <div class="ungu"><span>Hello, Apple intelligence</span></div>
-        </div>
-        <div class="hoyr">
-          <div class="arvanzurgaa">Airpods Pro 2</div>
-          <div class="bichig">Now with a Hearing Aid feature.2</div>
-          <div class="button">
-            <button class="learn">Learn more</button>
-            <button class="buy">Buy</button>
+            <div class="bichig">
+              Get $180-$650 in credit when you trade in Iphone 12 or higher.3
+            </div>
+            <div class="button">
+              <button class="learn">Get Your estimate</button>
+            </div>
+          </div>
+          <div class="zurgaa">
+            <div class="arvanzurgaa">iPad air</div>
+            <div class="bichig">
+              Get up 3% Daily Cash back with every purchase
+            </div>
+            <div class="button">
+              <button class="learn">Learn more</button>
+              <button class="buy">Apply now</button>
+            </div>
           </div>
         </div>
-        <div class="gurav">
-          <div class="arvanzurgaa"><i class="fa-brands fa-apple fa-xl"></i> Watch</div>
-          <div class="bichig">Thinstant classic.</div>
-          <div class="button">
-            <button class="learn">Learn more</button>
-            <button class="buy">Buy</button>
+      </div>
+      <div class="page5">
+        <div
+          id="item1"
+          class="scroll"
+          style="background-image: url(./napoleon.jpg)"
+        >
+          <div class="carousel">
+            <button class="dardag2">Stream now</button>
+            <span class="span1">Drama</span>
+            <span class="span2">.</span>
+            <span class="span3">Experience Ridley Scott's extended epic.</span>
           </div>
         </div>
-        <div class="duruv">
-          <div class="arvanzurgaa">Macbook Air</div>
-          <div class="bichig">Lean. Mean. M3 machine.</div>
-          <div class="button">
-            <button class="learn">Learn more</button>
-            <button class="buy">Buy</button>
+        <div
+          id="item2"
+          class="scroll"
+          style="background-image: url(./bad-monkey.jpg)"
+        >
+          <div class="carousel">
+            <button class="dardag2">Stream now</button>
+            <span class="span1">Comedy</span>
+            <span class="span2">.</span>
+            <span class="span3">The shady side of paradise.</span>
           </div>
         </div>
-        <div class="tav">
-          <div class="arvanzurgaa"><i class="fa-brands fa-apple fa-xl"></i>Trade In</div>
-          <div class="bichig">Get $180-$650 in credit when you trade in Iphone 12 or higher.3</div>
-          <div class="button">
-            <button class="learn">Get Your estimate</button>
+        <div
+          id="item3"
+          class="scroll"
+          style="background-image: url(./instigators.jpg)"
+        >
+          <div class="carousel">
+            <button class="dardag2">Stream now</button>
+            <span class="span1">Action</span>
+            <span class="span2">.</span>
+            <span class="span3">Worst. Heist. Ever.</span>
           </div>
         </div>
-        <div class="zurgaa">
-          <div class="arvanzurgaa">iPad air</div>
-          <div class="bichig">Get up 3% Daily Cash back with every purchase</div>
-          <div class="button">
-            <button class="learn">Learn more</button>
-            <button class="buy">Apply now</button>
+        <div
+          id="item4"
+          class="scroll"
+          style="background-image: url(./k-pop-idols.jpg)"
+        >
+          <div class="carousel">
+            <button class="dardag2">Stream now</button>
+            <span class="span1">Documentary</span>
+            <span class="span2">.</span>
+            <span class="span3">All that glitters isn't gold.</span>
           </div>
         </div>
-    </div>
-  </div>
-  <div class="page5">
-    <div id="item1" class="scroll" style="background-image: url(./napoleon.jpg);">
-      <div class="carousel">
-        <button class="dardag2"> Stream now</button>
-        <span class="span1">Drama</span>
-        <span class="span2">.</span>
-        <span class="span3">Experience Ridley Scott's extended epic.</span>
+        <div
+          id="item5"
+          class="scroll"
+          style="background-image: url(./season-pass.jpg)"
+        >
+          <div class="carousel">
+            <button class="dardag2">Stream now</button>
+            <span class="span3"
+              >Watch messi, every club, and every match--live.</span
+            >
+          </div>
+        </div>
+        <div
+          id="item6"
+          class="scroll"
+          style="background-image: url(./pressumed-innocent.jpg)"
+        >
+          <div class="carousel">
+            <button class="dardag2">Stream now</button>
+            <span class="span1">Crime</span>
+            <span class="span2">.</span>
+            <span class="span3">Presume nothing.</span>
+          </div>
+        </div>
+        <div
+          id="item7"
+          class="scroll"
+          style="background-image: url(./pachinko.jpg)"
+        >
+          <div class="carousel">
+            <button class="dardag2">Stream now</button>
+            <span class="span1">Drama</span>
+            <span class="span2">.</span>
+            <span class="span3">New season.</span>
+          </div>
+        </div>
+        <div
+          id="item8"
+          class="scroll"
+          style="background-image: url(./baseball.jpg)"
+        >
+          <div class="carousel">
+            <button class="dardag2">Stream now</button>
+            <span class="span3">Live MLB games, every friday.</span>
+          </div>
+        </div>
+        <div
+          id="item9"
+          class="scroll"
+          style="background-image: url(./lady-in-the-lake.jpg)"
+        >
+          <div class="carousel">
+            <button class="dardag2">Stream now</button>
+            <span class="span1">Thriller</span>
+            <span class="span2">.</span>
+            <span class="span3"
+              >Natalie Portman and Moses Ingram star in a visionary noir
+              thriller.</span
+            >
+          </div>
+        </div>
+        <div
+          id="item10"
+          class="scroll"
+          style="background-image: url(./morning-show.jpg)"
+        >
+          <div class="carousel">
+            <button class="dardag2">Stream now</button>
+            <span class="span1">Drama</span>
+            <span class="span2">.</span>
+            <span class="span3">16 Emmy Nominations Including Best Drama</span>
+          </div>
+        </div>
+      </div>
+      <div class="page6">
+        <a href="#item1" class="dardag"></a>
+        <a href="#item2" class="dardag"></a>
+        <a href="#item3" class="dardag"></a>
+        <a href="#item4" class="dardag"></a>
+        <a href="#item5" class="dardag"></a>
+        <a href="#item6" class="dardag"></a>
+        <a href="#item7" class="dardag"></a>
+        <a href="#item8" class="dardag"></a>
+        <a href="#item9" class="dardag"></a>
+        <a href="#item10" class="dardag"></a>
+      </div>
+      <div class="page7">
+        <div class="doloo" style="background-image: url(./a7-1.jpg)">
+          <div class="doloo1">
+            <span>Improve Your Posture wicth Pilates</span>
+            <span><img src="./fitnes.png" alt="" /></span>
+          </div>
+        </div>
+        <div class="doloo" style="background-image: url(./a7-2.jpg)">
+          <div class="doloo1">
+            <span>R&B Now</span>
+            <span><img src="./music.png" alt="" /></span>
+          </div>
+        </div>
+        <div class="doloo" style="background-image: url(./a7-3.jpg)">
+          <div class="doloo1">
+            <span>NBA 2K25 Arcade Edition</span>
+            <span> <img src="./arcade.png" alt="" /></span>
+          </div>
+        </div>
+        <div class="doloo" style="background-image: url(./a7-4.jpg)">
+          <div class="doloo1">
+            <span>Strength with Kim</span>
+            <span> <img src="fitnes.png" alt="" /></span>
+          </div>
+        </div>
+        <div class="doloo">
+          <img class="zurag7" src="./a7-5.jpg" alt="" />
+        </div>
+        <div class="doloo" style="background-image: url(./a7-1.jpg)">
+          <div class="doloo1">
+            <span>Improve Your Posture wicth Pilates</span>
+            <span><img src="./fitnes.png" alt="" /></span>
+          </div>
+        </div>
+        <div class="doloo" style="background-image: url(./a7-2.jpg)">
+          <div class="doloo1">
+            <span>R&B Now</span>
+            <span><img src="./music.png" alt="" /></span>
+          </div>
+        </div>
+        <div class="doloo" style="background-image: url(./a7-3.jpg)">
+          <div class="doloo1">
+            <span>NBA 2K25 Arcade Edition</span>
+            <span> <img src="./arcade.png" alt="" /></span>
+          </div>
+        </div>
+        <div class="doloo" style="background-image: url(./a7-4.jpg)">
+          <div class="doloo1">
+            <span>Strength with Kim</span>
+            <span> <img src="fitnes.png" alt="" /></span>
+          </div>
+        </div>
+        <div class="doloo"><img class="zurag7" src="./a7-5.jpg" alt="" /></div>
       </div>
     </div>
-    <div id="item2" class="scroll" style="background-image: url(./bad-monkey.jpg);">
-      <div class="carousel">
-        <button class="dardag2"> Stream now</button>
-        <span class="span1">Comedy</span>
-        <span class="span2">.</span>
-        <span class="span3">The shady side of paradise.</span>
-      </div>
-    </div>
-    <div id="item3" class="scroll" style="background-image: url(./instigators.jpg);">
-      <div class="carousel">
-        <button class="dardag2"> Stream now</button>
-        <span class="span1">Action</span>
-        <span class="span2">.</span>
-        <span class="span3">Worst. Heist. Ever.</span>
-      </div>
-    </div>
-    <div id="item4" class="scroll" style="background-image: url(./k-pop-idols.jpg);">
-      <div class="carousel">
-        <button class="dardag2">Stream now</button>
-        <span class="span1">Documentary</span>
-        <span class="span2">.</span>
-        <span class="span3">All that glitters isn't gold.</span>
-      </div>
-    </div>
-    <div id="item5" class="scroll" style="background-image: url(./season-pass.jpg);">
-      <div class="carousel">
-        <button class="dardag2"> Stream now</button>
-         <span class="span3">Watch messi, every club, and every match--live.</span>
-      </div>
-    </div>
-    <div id="item6" class="scroll" style="background-image: url(./pressumed-innocent.jpg);">
-      <div class="carousel">
-        <button class="dardag2"> Stream now</button>
-        <span class="span1">Crime</span>
-        <span class="span2">.</span>
-        <span class="span3">Presume nothing.</span>
-      </div> 
-    </div>
-    <div id="item7" class="scroll" style="background-image: url(./pachinko.jpg);">
-      <div class="carousel">
-        <button class="dardag2"> Stream now</button>
-        <span class="span1">Drama</span>
-        <span class="span2">.</span>
-        <span class="span3">New season.</span>
-      </div>
-    </div>
-    <div id="item8" class="scroll" style="background-image: url(./baseball.jpg);">
-      <div class="carousel">
-        <button class="dardag2"> Stream now</button>
-        <span class="span3">Live MLB games, every friday.</span>
-      </div>
-    </div>
-    <div id="item9" class="scroll" style="background-image: url(./lady-in-the-lake.jpg);">
-      <div class="carousel">
-        <button class="dardag2"> Stream now</button>
-        <span class="span1">Thriller</span>
-        <span class="span2">.</span>
-        <span class="span3">Natalie Portman and Moses Ingram star in a visionary noir thriller.</span>
-    </div>
-    </div>
-    <div id="item10" class="scroll" style="background-image: url(./morning-show.jpg);">
-      <div class="carousel">
-        <button class="dardag2"> Stream now</button>
-        <span class="span1">Drama</span>
-        <span class="span2">.</span>
-        <span class="span3">16 Emmy Nominations Including Best Drama</span>
-      </div>
-    </div>
-  </div>
-  <div class="page6">
-    <a href="#item1" class="dardag"></a>
-    <a href="#item2" class="dardag"></a>
-    <a href="#item3" class="dardag"></a>
-    <a href="#item4" class="dardag"></a>
-    <a href="#item5" class="dardag"></a>
-    <a href="#item6" class="dardag"></a>
-    <a href="#item7" class="dardag"></a>
-    <a href="#item8" class="dardag"></a>
-    <a href="#item9" class="dardag"></a>
-    <a href="#item10" class="dardag"></a>
-  </div>
-  <div class="page7">
-
-  </div>
   </body>
 </html>
