--- a/applestore.html
+++ b/applestore.html
@@ -42,17 +42,21 @@
             <span class="magic">Gift magic this holiday.</span>
           </div>
           <div class="avgai">
-            <div class="tusda">
-              <!-- <img
+            <div>
+              <img
                 src="./f2b679ae6791d18fc8aeadd75a3c2d3e35c715ef.jpg"
                 alt=""
-              /> -->
-              <span class="tom">Need shopping help?</span>
-              <a class="jijig" href="">Ask a Specialist</a>
+              />
             </div>
             <div class="hamt">
-              <span class="tom">Visit an Apple Store</span>
-              <a class="jijig" href="">Find one near you></a>
+              <div class="hamt">
+                <span class="tom">Need shopping help?</span>
+                <a class="jijig" href="">Ask a Specialist</a>
+              </div>
+              <div class="hamt">
+                <span class="tom">Visit an Apple Store</span>
+                <a class="jijig" href="">Find one near you></a>
+              </div>
             </div>
           </div>
         </div>
@@ -304,13 +308,13 @@
           <span class="magic">Add more magic to the moment.</span>
         </div>
         <div class="neeg">
-          <div class="zyrag" style="background-image: url(../4-1.jpg)">
+          <div class="zyrag" style="background-image: url(./p4-1.jpg)">
             <span class="namep"
               >Surprise your favorites with these favorites.</span
             >
           </div>
           <div class="neg">
-            <img class="hoyr" src="../4-2.jpg" alt="" />
+            <img class="hoyr" src="./p4-2.jpg" alt="" />
             <div class="zrg">
               <img class="zurg" src="./1-shar.jpg" alt="" />
               <img class="zurg" src="./1-grey.jpg" alt="" />
@@ -341,7 +345,7 @@
             </div>
           </div>
           <div class="neg">
-            <img class="hoyr" src="../4-3.jpg" alt="" />
+            <img class="hoyr" src="./p4-4.jpg" alt="" />
             <div class="zrg">
               <img class="zurg" src="./3-1.jpg" alt="" />
               <img class="zurg" src="./3-2.jpg" alt="" />
@@ -357,7 +361,7 @@
             </div>
           </div>
           <div class="neg">
-            <img class="hoyr" src="../4-4.jpg" alt="" />
+            <img class="hoyr" src="./p4-5.jpg" alt="" />
             <div class="zrg">
               <img class="zurg" src="./4-1.jpg" alt="" />
               <img class="zurg" src="4-2.jpg" alt="" />
@@ -371,7 +375,7 @@
             </div>
           </div>
           <div class="neg">
-            <img class="hoyr" src="../4-2.jpg" alt="" />
+            <img class="hoyr" src="./p4-2.jpg" alt="" />
             <div class="zrg">
               <img class="zurg" src="./1-shar.jpg" alt="" />
               <img class="zurg" src="./1-grey.jpg" alt="" />
@@ -402,7 +406,7 @@
             </div>
           </div>
           <div class="neg">
-            <img class="hoyr" src="../4-4.jpg" alt="" />
+            <img class="hoyr" src="./p4-4.jpg" alt="" />
             <div class="zrg">
               <img class="zurg" src="./4-1.jpg" alt="" />
               <img class="zurg" src="4-2.jpg" alt="" />
@@ -417,7 +421,7 @@
             </div>
           </div>
           <div class="neg">
-            <img class="hoyr" src="../4-2.jpg" alt="" />
+            <img class="hoyr" src="./p4-2.jpg" alt="" />
             <div class="zrg">
               <img class="zurg" src="./1-shar.jpg" alt="" />
               <img class="zurg" src="./1-grey.jpg" alt="" />
@@ -442,23 +446,48 @@
         </div>
         <div class="scroll">
           <div class="gadar" style="background-image: url(./5-1.jpg)">
-            <span></span>
+            <span class="garchig"
+              >Get gifts in time for the holidays with two hour delivery,² free
+              delivery,or easy pickup.</span
+            >
           </div>
-          <div class="gadar">
-            <span class=""></span>
-            <span class=""></span>
+          <div class="p5-2">
+            <div class="hamtda">
+              <span class="garchig"
+                >Customize your Mac and create your own style of Apple
+                Watch.</span
+              >
+            </div>
+            <div class="hamtda">
+              <span class="garchig"
+                >Pay in full or pay over time. Your choice.</span
+              >
+            </div>
           </div>
-          <div class="gadar">
-            <span class=""></span>
-            <span class=""></span>
+          <div class="p5-2">
+            <div class="hamtda">
+              <span class="garchig"
+                >Free extended returns between now and 1/8/25.</span
+              >
+            </div>
+            <div class="hamtda">
+              <span class="garchig"
+                >Make them yours. Engrave a mix of emoji, names, and numbers for
+                free.</span
+              >
+            </div>
           </div>
           <div class="gadar" style="background-image: url(./5-4.jpg)">
-            <span class=""></span>
-            <span class=""></span>
+            <span class="jijigtitle">APPLE TRADE IN</span>
+            <span class="garchig"
+              >Trade in your current device. Get credit toward a new one.³</span
+            >
           </div>
           <div class="gadar" style="background-image: url(./5-5.jpg)">
-            <span class=""></span>
-            <span class=""></span>
+            <span class="jijigtitle">APPLE SPECIALIST</span>
+            <span class="garchig"
+              >Find gifts with an Apple Specialist in a store or online.</span
+            >
           </div>
         </div>
       </div>
@@ -469,24 +498,28 @@
         </div>
         <div class="scroll">
           <div class="gadar" style="background-image: url(./6-1.jpg)">
-            <span class=""></span>
-            <span class=""></span>
-            <span class=""></span>
+            <span class="jijigtitle">APPLE MUSIC</span>
+            <span class="garchig">Get 3 months of Apple Music free.</span>
+            <span class="garchig2"
+              >Included with the purchase of select Apple devices.</span
+            >
           </div>
           <div class="gadar" style="background-image: url(./6-2.png)">
-            <span class=""></span>
-            <span class=""></span>
-            <span class=""></span>
+            <span class="jijigtitle">APPLE TV+</span>
+            <span class="garchigg"
+              >Get 3 months free when you buy an Apple device.</span
+            >
           </div>
           <div class="gadar" style="background-image: url(./6-3.jpg)">
-            <span class=""></span>
-            <span class=""></span>
-            <span class=""></span>
+            <span class="garchig"
+              >Six Apple services. One easy subscription.</span
+            >
           </div>
           <div class="gadar" style="background-image: url(./6-4.jpg)">
-            <span class=""></span>
-            <span class=""></span>
-            <span class=""></span>
+            <span class="jijigtitle">APPLE INTELLIGENCE</span>
+            <span class="garchig"
+              >New features for writing, focus,communication, and more.</span
+            >
           </div>
         </div>
       </div>
@@ -500,39 +533,53 @@
         </div>
         <div class="scroll">
           <div class="gadar" style="background-image: url(./7-1.jpg)">
-            <span class=""></span>
-            <span class=""></span>
-            <span class=""></span>
+            <span class="jijigtitle">CARRIER DEALS</span>
+            <span class="garchig"
+              >Apple. Your one‑stop shop for incredible carrier deals.</span
+            >
+            <span class="garchig2"
+              >Get up to $1000 in credit on a new iPhone with AT&T,
+              Boost Mobile, T‑Mobile, or Verizon. Trade‑in may be
+              required.⁴</span
+            >
           </div>
-          <div cl class="" ass="gadar" style="background-image: url(./7-2.jpg)">
-            <span class=""></span>
-            <span class=""></span>
-            <span class=""></span>
+          <div class="gadar" style="background-image: url(./7-2.jpg)">
+            <span class="jijigtitle">EDUCATION</span>
+            <span class="garchig"
+              >Buy a new Mac or iPad with education savings.</span
+            >
           </div>
           <div class="gadar" style="background-image: url(./7-3.jpg)">
-            <span class=""></span>
-            <span class=""></span>
-            <span class=""></span>
+            <span class="jijigtitle">CERTIFIED REFURBISHED</span>
+            <span class="garchig"
+              >Shop refurbished Apple products backed by a one‑year
+              warranty.</span
+            >
           </div>
           <div class="gadar" style="background-image: url(./7-4.jpg)">
-            <span class=""></span>
-            <span class=""></span>
-            <span class=""></span>
+            <span class="jijigtitle">BUSINESS</span>
+            <span class="garchigg"
+              >From enterprise to small business, we’ll work with you.</span
+            >
           </div>
           <div class="gadar" style="background-image: url(./7-5.jpg)">
-            <span class=""></span>
-            <span class=""></span>
-            <span class=""></span>
+            <span class="jijigtitle">GOVERNMENT</span>
+            <span class="garchig"
+              >Special pricing is available for state, local, and federal
+              agencies.</span
+            >
           </div>
         </div>
       </div>
       <footer>
-        <div>Quick Links</div>
-        <div>
-          <div>Order Status</div>
-          <div>Shopping Help</div>
-          <div>Returns</div>
-          <div>Your Saves</div>
+        <div class="f-1">Quick Links</div>
+        <div class="f2">
+          <div class="f2-2">Order Status <img src="./Vector.png" alt="" /></div>
+          <div class="f2-2">
+            Shopping Help <img src="./Vector.png" alt="" />
+          </div>
+          <div class="f2-2">Returns <img src="./Vector.png" alt="" /></div>
+          <div class="f2-2">Your Saves <img src="./Vector.png" alt="" /></div>
         </div>
       </footer>
     </div>
