--- a/applestore.html
+++ b/applestore.html
@@ -44,6 +44,7 @@
           <div class="avgai">
             <div>
               <img
+                class="tng"
                 src="./f2b679ae6791d18fc8aeadd75a3c2d3e35c715ef.jpg"
                 alt=""
               />
@@ -107,7 +108,6 @@
           </div>
         </div>
       </div>
-
       <div class="page2">
         <div class="bichig2">
           <span class="store">The latest.</span>
@@ -173,7 +173,6 @@
           </div>
         </div>
       </div>
-
       <div class="page3">
         <div class="bichig2">
           <span class="store">Personalization.</span>
@@ -301,7 +300,6 @@
           </div>
         </div>
       </div>
-
       <div class="page4">
         <div class="bichig3">
           <span class="store">Holiday Picks..</span>
